# yp

./: .clang-format  CMakeLists.txt  CMakePresets.json  yp.code-workspace
.github/workflows/: Build.yaml
cmake/: MakeSourceList.cmake  TopLevel.cmake
libyunpa/: CMakeLists.txt
libyunpa/src/: CMakeLists.txt  libyunpa.cppm
libyunpa/src/Graphics/: CMakeLists.txt  Color.cpp  Color.cppm
libyunpa/src/Graphics/Elements/: Text.cpp  Text.cppm
libyunpa/src/Graphics/Interfaces/: CMakeLists.txt  Colorable.cpp  Colorable.cppm  Positionable.cpp  Positionable.cppm  Printable.cpp  Printable.cppm  Stylable.cpp  Stylable.cppm
libyunpa/src/System/: CMakeLists.txt  Point2.cppm
libyunpa/tests/: CMakeLists.txt  main.cpp
